force-app/main/default/objects/Policy_Transaction__c/Policy_Transaction__c.object-meta.xml
<CustomObject>
    <label>Policy Transaction</label>
    <nameField>
        <label>Policy Transaction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Policy Transaction</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>