force-app/main/default/objects/Policy_Transaction__c/fields/AccountGroupingBRZ__c.field-meta.xml
<CustomField>
    <fullName>AccountGroupingBRZ__c</fullName>
    <description>Copy Data from Account For BRZ</description>
    <formula>TEXT( Customer_Account__r.Account_Grouping__c )</formula>
    <label>סיווג לקוחות לבר זיו רביד</label>
    <type>Text</type>
</CustomField>