force-app/main/default/objects/Policy_Transaction__c/fields/Agent_Discount_Written_In_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Agent_Discount_Written_In_Carrier__c</fullName>
    <label>Agent Discount Written In Carrier</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>