force-app/main/default/objects/Policy_Transaction__c/fields/Agent_number_from_Insurance_comapny__c.field-meta.xml
<CustomField>
    <fullName>Agent_number_from_Insurance_comapny__c</fullName>
    <label>Agent number from Insurance comapny</label>
    <length>200</length>
    <type>Text</type>
</CustomField>