force-app/main/default/objects/Policy_Transaction__c/fields/Broker_Number__c.field-meta.xml
<CustomField>
    <fullName>Broker_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Broker Number</label>
    <referenceTo>Novidea_HPC__Broker_Number__c</referenceTo>
    <relationshipLabel>Policy Transaction</relationshipLabel>
    <relationshipName>Policy_Transaction</relationshipName>
    <type>Lookup</type>
</CustomField>