force-app/main/default/objects/Policy_Transaction__c/fields/BZR_Account__c.field-meta.xml
<CustomField>
    <fullName>BZR_Account__c</fullName>
    <formula>Customer_Account__r.BRZ__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BZR Account</label>
    <type>Checkbox</type>
</CustomField>