force-app/main/default/objects/Policy_Transaction__c/fields/Carrier__c.field-meta.xml
<CustomField>
    <fullName>Carrier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Carrier</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Policy Transaction</relationshipLabel>
    <relationshipName>Policy_Transaction</relationshipName>
    <type>Lookup</type>
</CustomField>