force-app/main/default/objects/Policy_Transaction__c/fields/Carrier_File_Code__c.field-meta.xml
<CustomField>
    <fullName>Carrier_File_Code__c</fullName>
    <label>Carrier File Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>