force-app/main/default/objects/Policy_Transaction__c/fields/Carrier_Product__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Carrier Product</label>
    <referenceTo>Novidea_HPC__Carrier_Product__c</referenceTo>
    <relationshipLabel>רשומות פרודוקציה</relationshipLabel>
    <relationshipName>Policy_Transaction</relationshipName>
    <type>Lookup</type>
</CustomField>