force-app/main/default/objects/Policy_Transaction__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Policy Transaction</relationshipLabel>
    <relationshipName>Policy_Transaction</relationshipName>
    <type>Lookup</type>
</CustomField>