force-app/main/default/objects/Policy_Transaction__c/fields/client_Number_From_Agent__c.field-meta.xml
<CustomField>
    <fullName>client_Number_From_Agent__c</fullName>
    <label>client Number From Agent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>