force-app/main/default/objects/Policy_Transaction__c/fields/Comments_Agent_number__c.field-meta.xml
<CustomField>
    <fullName>Comments_Agent_number__c</fullName>
    <label>Comments Agent number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>