force-app/main/default/objects/Policy_Transaction__c/fields/comments_customer_account__c.field-meta.xml
<CustomField>
    <fullName>comments_customer_account__c</fullName>
    <label>comments customer account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>