force-app/main/default/objects/Policy_Transaction__c/fields/comments_for_Account__c.field-meta.xml
<CustomField>
    <fullName>comments_for_Account__c</fullName>
    <label>comments for Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>