force-app/main/default/objects/Policy_Transaction__c/fields/Comments_Insurance_Company__c.field-meta.xml
<CustomField>
    <fullName>Comments_Insurance_Company__c</fullName>
    <label>Comments Insurance Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>