force-app/main/default/objects/Policy_Transaction__c/fields/Comments_Policy__c.field-meta.xml
<CustomField>
    <fullName>Comments_Policy__c</fullName>
    <label>Comments Policy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>