force-app/main/default/objects/Policy_Transaction__c/fields/Commission_Agent_B__c.field-meta.xml
<CustomField>
    <fullName>Commission_Agent_B__c</fullName>
    <label>Commission Agent B</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>