force-app/main/default/objects/Policy_Transaction__c/fields/Commission_Written_In_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Commission_Written_In_Carrier__c</fullName>
    <label>Commission Written In Carrier</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>