force-app/main/default/objects/Policy_Transaction__c/fields/Credit_Fee__c.field-meta.xml
<CustomField>
    <fullName>Credit_Fee__c</fullName>
    <label>Credit Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>