force-app/main/default/objects/Policy_Transaction__c/fields/Customer_Account__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Policy Transaction (Customer Account)</relationshipLabel>
    <relationshipName>Policy_Transaction1</relationshipName>
    <type>Lookup</type>
</CustomField>