force-app/main/default/objects/Policy_Transaction__c/fields/customer_full_name__c.field-meta.xml
<CustomField>
    <fullName>customer_full_name__c</fullName>
    <label>customer full name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>