force-app/main/default/objects/Policy_Transaction__c/fields/Endorsement_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Endorsement_Expiration_Date__c</fullName>
    <label>Endorsement_Expiration_Date</label>
    <type>Date</type>
</CustomField>