force-app/main/default/objects/Policy_Transaction__c/fields/endorsement_number__c.field-meta.xml
<CustomField>
    <fullName>endorsement_number__c</fullName>
    <label>endorsement number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>