force-app/main/default/objects/Policy_Transaction__c/fields/Errors_while_updating_Sobject__c.field-meta.xml
<CustomField>
    <fullName>Errors_while_updating_Sobject__c</fullName>
    <label>Errors while updating Sobject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>