force-app/main/default/objects/Policy_Transaction__c/fields/file_name__c.field-meta.xml
<CustomField>
    <fullName>file_name__c</fullName>
    <label>file name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>