force-app/main/default/objects/Policy_Transaction__c/fields/Identification_Type__c.field-meta.xml
<CustomField>
    <fullName>Identification_Type__c</fullName>
    <label>Identification Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Policy Number</fullName>
            </value>
            <value>
                <fullName>Full Auto</fullName>
            </value>
            <value>
                <fullName>Partially Auto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>