force-app/main/default/objects/Policy_Transaction__c/fields/Insurance_Type__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Type__c</fullName>
    <label>Insurance Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>first val</fullName>
            </value>
            <value>
                <fullName>second val</fullName>
            </value>
            <value>
                <fullName>third val</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>