force-app/main/default/objects/Policy_Transaction__c/fields/Insured_number__c.field-meta.xml
<CustomField>
    <fullName>Insured_number__c</fullName>
    <description>מספר לקוח או מספר חברה</description>
    <label>Insured number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>