force-app/main/default/objects/Policy_Transaction__c/fields/Insured_Type__c.field-meta.xml
<CustomField>
    <fullName>Insured_Type__c</fullName>
    <label>Insured Type</label>
    <length>200</length>
    <type>Text</type>
</CustomField>