force-app/main/default/objects/Policy_Transaction__c/fields/is_Account_Found__c.field-meta.xml
<CustomField>
    <fullName>is_Account_Found__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Account Found</label>
    <type>Checkbox</type>
</CustomField>