force-app/main/default/objects/Policy_Transaction__c/fields/Is_carrier_Found__c.field-meta.xml
<CustomField>
    <fullName>Is_carrier_Found__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is carrier Found</label>
    <type>Checkbox</type>
</CustomField>