force-app/main/default/objects/Policy_Transaction__c/fields/Is_Customer_Located_By_Head_To_Tail__c.field-meta.xml
<CustomField>
    <fullName>Is_Customer_Located_By_Head_To_Tail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Customer Located By Head To Tail</label>
    <type>Checkbox</type>
</CustomField>