force-app/main/default/objects/Policy_Transaction__c/fields/Is_Policy_found__c.field-meta.xml
<CustomField>
    <fullName>Is_Policy_found__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Policy found</label>
    <type>Checkbox</type>
</CustomField>