force-app/main/default/objects/Policy_Transaction__c/fields/Master_Product_Definition__c.field-meta.xml
<CustomField>
    <fullName>Master_Product_Definition__c</fullName>
    <formula>IF( 
					NOT(ISBLANK( 
					Carrier_Product__r.Novidea_HPC__Product_Definition__r.Novidea_HPC__Master_Product_Definition__r.Novidea_HPC__Master_Product_Definition__r.Novidea_HPC__Master_Product_Definition__r.Novidea_HPC__Master_Product_Definition__r.Novidea_HPC__Master_Product_Definition__c)),
					Carrier_Product__r.Novidea_HPC__Product_Definition__r.Novidea_HPC__Master_Product_Definition__r.Novidea_HPC__Master_Product_Definition__r.Novidea_HPC__Master_Product_Definition__r.Novidea_HPC__Master_Product_Definition__r.Novidea_HPC__Master_Product_Definition__c, 
					IF( 
					NOT(ISBLANK( 
					Carrier_Product__r.Novidea_HPC__Product_Definition__r.Novidea_HPC__Master_Product_Definition__r.Novidea_HPC__Master_Product_Definition__r.Novidea_HPC__Master_Product_Definition__r.Novidea_HPC__Master_Product_Definition__c)), 
					Carrier_Product__r.Novidea_HPC__Product_Definition__r.Novidea_HPC__Master_Product_Definition__r.Novidea_HPC__Master_Product_Definition__r.Novidea_HPC__Master_Product_Definition__r.Novidea_HPC__Master_Product_Definition__c, 
					IF( 
					NOT(ISBLANK( 
					Carrier_Product__r.Novidea_HPC__Product_Definition__r.Novidea_HPC__Master_Product_Definition__r.Novidea_HPC__Master_Product_Definition__r.Novidea_HPC__Master_Product_Definition__c)), 
					Carrier_Product__r.Novidea_HPC__Product_Definition__r.Novidea_HPC__Master_Product_Definition__r.Novidea_HPC__Master_Product_Definition__r.Novidea_HPC__Master_Product_Definition__c, 
					IF( 
					NOT(ISBLANK( 
					Carrier_Product__r.Novidea_HPC__Product_Definition__r.Novidea_HPC__Master_Product_Definition__r.Novidea_HPC__Master_Product_Definition__c)), 
					Carrier_Product__r.Novidea_HPC__Product_Definition__r.Novidea_HPC__Master_Product_Definition__r.Novidea_HPC__Master_Product_Definition__c, 
					IF( 
					NOT(ISBLANK( 
					Carrier_Product__r.Novidea_HPC__Product_Definition__r.Novidea_HPC__Master_Product_Definition__c)), 
					Carrier_Product__r.Novidea_HPC__Product_Definition__r.Novidea_HPC__Master_Product_Definition__c, 
					Carrier_Product__r.Novidea_HPC__Product_Definition__c 
					) 
					) 
					) 
					) 
		)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Master Product Definition</label>
    <type>Text</type>
</CustomField>