force-app/main/default/objects/Policy_Transaction__c/fields/Other_Commissions__c.field-meta.xml
<CustomField>
    <fullName>Other_Commissions__c</fullName>
    <label>Other Commissions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>