force-app/main/default/objects/Policy_Transaction__c/fields/Policy__c.field-meta.xml
<CustomField>
    <fullName>Policy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Policy</label>
    <referenceTo>Novidea_HPC__Policy__c</referenceTo>
    <relationshipLabel>Policy Transaction</relationshipLabel>
    <relationshipName>Policy_Transaction</relationshipName>
    <type>Lookup</type>
</CustomField>