force-app/main/default/objects/Policy_Transaction__c/fields/Policy_Content__c.field-meta.xml
<CustomField>
    <fullName>Policy_Content__c</fullName>
    <label>Policy Content</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>