force-app/main/default/objects/Policy_Transaction__c/fields/Policy_number_from_Insurance_company__c.field-meta.xml
<CustomField>
    <fullName>Policy_number_from_Insurance_company__c</fullName>
    <label>Policy Number from Insurance company</label>
    <length>200</length>
    <type>Text</type>
</CustomField>