force-app/main/default/objects/Policy_Transaction__c/fields/premium__c.field-meta.xml
<CustomField>
    <fullName>premium__c</fullName>
    <label>premium</label>
    <length>255</length>
    <type>Text</type>
</CustomField>