force-app/main/default/objects/Policy_Transaction__c/fields/Premium_Currency__c.field-meta.xml
<CustomField>
    <fullName>Premium_Currency__c</fullName>
    <label>Premium Currency</label>
    <length>200</length>
    <type>Text</type>
</CustomField>