force-app/main/default/objects/Policy_Transaction__c/fields/Premium_neto__c.field-meta.xml
<CustomField>
    <fullName>Premium_neto__c</fullName>
    <label>Premium neto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>