force-app/main/default/objects/Policy_Transaction__c/fields/Product_Def__c.field-meta.xml
<CustomField>
    <fullName>Product_Def__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Def.</label>
    <referenceTo>Novidea_HPC__Product_Def__c</referenceTo>
    <relationshipLabel>Policy Transaction</relationshipLabel>
    <relationshipName>Policy_Transaction</relationshipName>
    <type>Lookup</type>
</CustomField>