force-app/main/default/objects/Policy_Transaction__c/fields/product_from_insurance_company__c.field-meta.xml
<CustomField>
    <fullName>product_from_insurance_company__c</fullName>
    <label>product from insurance company</label>
    <length>10</length>
    <type>Text</type>
</CustomField>