force-app/main/default/objects/Policy_Transaction__c/fields/Reason_for_Difference__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Difference__c</fullName>
    <label>Reason for Difference</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>