force-app/main/default/objects/Policy_Transaction__c/fields/vehicle_number__c.field-meta.xml
<CustomField>
    <fullName>vehicle_number__c</fullName>
    <label>vehicle number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>